# CppPyIntegration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cppCall.py  demoMain.cpp  demoMain.py  pyCall.cpp  python_spawn_subprocess.spec  requirements.txt
cmake/: CppPyIntegrationUtils.cmake
cpp/: CMakeLists.txt  py_subprocess.cpp
cpp/src/: CMakeLists.txt  binder.cpp  binder_lib.cpp  binder_lib.h  wrapper_lib.cpp  wrapper_lib.h
docs/: blog.md
examples/: CMakeLists.txt  cpp_call_python_main.cpp  python_import_cpp_binder.py  python_import_cpp_lib.py  python_spawn_subprocess.py
examples/utils/: BinderLib.cp37-win_amd64.pyd  BinderLib.lib  WrapperLib.cp310-win_amd64.pyd  WrapperLib.cp37-win_amd64.pyd  WrapperLib.lib
logs/: log.INFO
python/: math_wrapper.pxd  math_wrapper.pyx  setup.py
python/ext/: setup.py  wrapper_lib.cpp  wrapper_lib.pyx
python/ext/tmp/: wrapper_lib.pxd
sandbox/: SocketServer.cpp  SocketServer.h  main.cpp
